--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,20 @@
         <link rel="stylesheet" href="assets/styles.css">
     </head>
     <body
-        <h1>Hello</h1>
+        <nav class="navbar">
+    <div class="container">
+        <div class="col-lg-3 col-md-3 col-xs-3 col-sm-3">
+            <img src="./imgs/mec_logo.png" class="img-responsive">
+        </div>
+        <div class="col-sm-6 col-lg-6 col-xs-6 col-md-6 col-lg-6"></div>
+        <div class="col-sm-3 col-xs-3 col-md-3 col-lg-3">
+            <img src="./imgs/excel2017.png" class="img-responsive">
+        </div>
+    </div>
+</nav>
+<div>
+<h1>shdbb</h1>
+</div>
 
         <script src="assets/scripts.js"></script>
     </body>
