--- a/src/index.html
+++ b/src/index.html
@@ -8,35 +8,47 @@
         <nav class="navbar">
     <div class="container">
         <div class="col-lg-3 col-md-3 col-xs-3 col-sm-3">
-            <img src="./imgs/mec_logo.png" class="img-responsive">
+            <img src="./imgs/mec_logo.png" class="img-responsive colg-logo">
         </div>
         <div class="col-sm-6 col-lg-6 col-xs-6 col-md-6 col-lg-6"></div>
         <div class="col-sm-3 col-xs-3 col-md-3 col-lg-3 excel">
-            <img src="./imgs/excel2017.png" class="img-responsive">
+            <img src="./imgs/excel2017.png" class="img-responsive excel-logo">
         </div>
     </div>
 </nav>
 
-        <section>
-    <div class="ccounter timer-bg">
+        <section class="intro-section">
+
+    <img src="./imgs/secondlap.png" class="bg" />
+    <div class="intro-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </div>
+</section>
+
+        <section class="timer-section">
+	<img src="./imgs/thesecondlap.png" class="event-logo" />
+	<div class="ccounter timer-bg">
         <div class="timer-contain">
             <div class="timer-label">
-                <input class="knob days dial" data-readOnly="true" data-width="150" data-displayPrevious=true data-fgColor="#fff" data-skin="tron" data-thickness=".2" data-min="0" data-max="365" value="75">
+                <input class="knob days dial" data-readOnly="true" data-width="150" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-min="0" data-max="365" value="75">
                 <div class="dial-label">days</div>
             </div>
             <div class="timer-label">
-                <input class="knob hour dial" data-readOnly="true" data-width="150" data-min="0" data-max="24" data-displayPrevious=true data-fgColor="#fff" data-skin="tron" data-thickness=".2" value="75">
+                <input class="knob hour dial" data-readOnly="true" data-width="150" data-min="0" data-max="24" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" value="75">
                 <div class="dial-label">hours</div>
             </div>
             <div class="timer-label">
-                <input class="knob minute dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#fff" data-skin="tron" data-thickness=".2" value="75">
+                <input class="knob minute dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" value="75">
                 <div class="dial-label">minutes</div>
             </div>
             <div class="timer-label">
-                <input class="knob second dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#fff" data-skin="tron" data-thickness=".2" value="75">
+                <input class="knob second dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" value="75">
                 <div class="dial-label">seconds</div>
             </div>
         </div>
+    </div>
+    <div class="register">
+        <a href="#" class="btn btn-danger reg-button" role="button">Register</a>
     </div>
 </section>
 
