--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>The Second Lap</title>
         <link rel="stylesheet" href="assets/styles.css">
+        <link href="jquery.fullPage.css">
     </head>
     <body>
         <nav class="navbar">
@@ -17,15 +18,16 @@
     </div>
 </nav>
 
-        <section class="intro-section">
+        <div id="fullpage">
+                <section class=" section active intro-section">
 
-    <img src="./imgs/secondlap.png" class="bg" />
-    <div class="intro-text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </div>
-</section>
+        <img src="./imgs/secondlap.png" class="bg" />
+        <div class="intro-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+    </section>
 
-        <section class="timer-section">
+            <section class=" section timer-section">
 	<img src="./imgs/thesecondlap.png" class="event-logo" />
 	<div class="ccounter timer-bg">
         <div class="timer-contain">
@@ -52,15 +54,18 @@
     </div>
 </section>
 
-        <div class="container">
+            <div class="container">
 </div>
+        </div>
         <script src="./jquery-3.2.1.min%20(1).js"></script>
         <script src="jquery.ccountdown.js"></script>
         <script src="jquery.knob.js"></script>
         <script src="init.js"></script>
+        <script src="jquery.fullPage.min.js"></script>
         <script src="assets/scripts.js"></script>
         <script>
 	        $(".ccounter").ccountdown(2017,8,13,'7:00');
+	        $("#fullpage").fullpage();
         </script>
     </body>
 </html>
