Added contact and sponsors page

--- a/src/index.html
+++ b/src/index.html
@@ -28,30 +28,38 @@
     </section>
 
             <section class=" section timer-section">
-	<img src="./imgs/thesecondlap.png" class="event-logo" />
+	<img src="./imgs/thesecondlap.png" class="event-logo img-responsive" />
 	<div class="ccounter timer-bg">
         <div class="timer-contain">
             <div class="timer-label">
                 <input class="knob days dial" data-readOnly="true" data-width="150" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-min="0" data-max="365" value="75">
-                <div class="dial-label">days</div>
+                <div class="dial-label"><h2>days</h2></div>
             </div>
             <div class="timer-label">
                 <input class="knob hour dial" data-readOnly="true" data-width="150" data-min="0" data-max="24" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" value="75">
-                <div class="dial-label">hours</div>
+                <div class="dial-label"><h2>hours</h2></div>
             </div>
             <div class="timer-label">
                 <input class="knob minute dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" value="75">
-                <div class="dial-label">minutes</div>
+                <div class="dial-label"><h2>minutes</h2></div>
             </div>
             <div class="timer-label">
                 <input class="knob second dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" value="75">
-                <div class="dial-label">seconds</div>
+                <div class="dial-label"><h2>seconds</h2></div>
             </div>
         </div>
     </div>
     <div class="register">
         <a href="#" class="btn btn-danger reg-button" role="button">Register</a>
     </div>
+</section>
+
+            <section class="section">
+
+</section>
+
+            <section class="section">
+
 </section>
 
             <div class="container">
