--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         </div>
     </section>
 
-            <section class=" section timer-section">
+            <section class=" section">
 	<img src="./imgs/thesecondlap.png" class="event-logo img-responsive" />
 	<div class="ccounter timer-bg">
         <div class="timer-contain">
