--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
         <title>The Second Lap</title>
         <link rel="stylesheet" href="assets/styles.css">
         <link href="jquery.fullPage.css">
+        <link href="font-awesome.min.css">
     </head>
     <body>
         <nav class="navbar">
@@ -54,12 +55,32 @@
     </div>
 </section>
 
-            <section class="section">
-
-</section>
+            <section class="section"></section>
 
             <section class="section">
-
+    <div class="contact">
+        <h1 class="contact_heading">Contact US</h1>
+        <div class="contacts_section">
+            <div class="container">
+                <div class="col-lg-6 col-md-6 col-xs-6 col-sm-6">
+                    <h2>Elza Tess Varkey</h2>
+                    <span>Social Initatives Manager,Excel2017</span><br>
+                    <span>+91 9562391591</span>
+                </div>
+                <div class="col-xs-6 col-md-6 col-lg-6 col-xs-6">
+                    <h2>Arjun Saju</h2>
+                    <span>Chairman,Excel2017</span><br>
+                    <span>+91 8943239997</span>
+                </div>
+            </div>
+        </div>
+        <div class="socialIcons">
+            <h4>Follow Us on</h4>
+            <a href="#" class="facebook"><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a>
+            <a href="#" class="youtube"><i class="fa fa-youtube fa-3x"></i></a>
+            <a href="#" class="instagram"><i class="fa fa-instagram fa-3x"></i></a>
+        </div>
+    </div>
 </section>
 
             <div class="container">
@@ -70,6 +91,7 @@
         <script src="jquery.knob.js"></script>
         <script src="init.js"></script>
         <script src="jquery.fullPage.min.js"></script>
+        <script src="https://use.fontawesome.com/75bc5066dd.js"></script>
         <script src="assets/scripts.js"></script>
         <script>
 	        $(".ccounter").ccountdown(2017,8,13,'7:00');
