sponsor dummy content

--- a/src/index.html
+++ b/src/index.html
@@ -56,16 +56,35 @@
     </div>
 </section>
 
-<<<<<<< HEAD
-            <section class="section sponsor-section">
-	  <div class="sponsor gold"></div>
-	  <div class="sponsor yesbank"></div>
-	  <div class="sponsor medical"></div>
+<section class="section sponsor-section">
+		<div class="sponsor gold">
+			<div class="row">
+				<img src="./imgs/gold.png" class="sponsor-logo col-sm-6" />
+	            <div class="sponsor-text col-sm-6 gold-text">
+	                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	            </div>
+	       	</div>
+		</div>
+		<div class="sponsor yesbank">
+			<div class="row">
+				<img src="./imgs/yesbank.png" class="sponsor-logo col-sm-6" />
+	            <div class="sponsor-text col-sm-6 yesbank-text">
+	                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	            </div>
+			</div>
+		</div>
+		<div class="sponsor medical">
+			<div class="row">
+				<img src="./imgs/medical.png" class="sponsor-logo col-sm-6" />
+            	<div class="sponsor-text col-sm-6 medical-text">
+                	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laboreorum.
+	            </div>
+	        </div>
+		</div>
 
 </section>
-=======
-            <section class="section"></section>
->>>>>>> a8ddf6a0f779bafa0212446afe517f070368cfb3
+
+<section class="section"></section>
 
             <section class="section">
     <div class="contact">
