--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>The Second Lap</title>
+
         <link rel="stylesheet" href="assets/styles.css">
         <link href="jquery.fullPage.css">
         <link href="font-awesome.min.css">
@@ -9,6 +10,7 @@
     <body>
         <nav class="navbar">
     <div class="container">
+
         <div class="col-lg-3 col-md-3 col-xs-3 col-sm-3">
             <img src="./imgs/mec_logo.png" class="img-responsive colg-logo">
         </div>
@@ -21,33 +23,39 @@
 
         <div id="fullpage">
                 <section class=" section active intro-section">
-        <div class="row">
-            <img src="./imgs/secondlap.png" class="bg col-sm-6" />
-            <div class="intro-text col-sm-6">
-                At ​ Govt. Model Engineering College, we believe that ​ life is the most valuable gift, yet we fail to appreciate it. Of all the things one fancies, what if you had the power to give this gift to someone in need? On August 13th, 2017, YES BANK and Excel 2107 will strive to spread this message through ​ “The Second Lap”, a mini marathon being organised ​ in Kochi in association with Gold’s Gym, in connection with ​ World Organ Donation Day​ . The mini-marathon will witness about 500 participants, accompanied by teams from ​ The Indian Medical Association​ , spreading the message of Organ Donation. The event will be flagged off at ​ Willingdon Island​ and will cover a distance of 10 KM to conclude at Marine Drive, Kochi.
+    	<div class="common">
+        <div class="container">
+
+            <div class="col-md-6 col-lg-6 col-xs-12 col-sm-12">
+            	<img src="./imgs/secondlap.png" class="bg img-responsive" />
             </div>
+            <div class="intro-text col-md-6 col-lg-6 col-xs-12 col-sm-12">
+                Life is the most valuable gift, yet we fail to appreciate it. Of all the things one fancies, what if you had the power to give this gift to someone in need? On August 13th, 2017, YES BANK and Excel 2107 will strive to spread this message through ​ “The Second Lap”, a mini marathon being organised ​ in Kochi in association with Gold’s Gym and Medical Trust Hospital, in connection with ​ World Organ Donation Day​.
+            </div>
+        </div>
         </div>
     </section>
 
             <section class=" section">
+    <div class="common">
     <div class="event-logo">
 	    <img src="./imgs/thesecondlap.png" class="img-responsive" />
     </div>
 	<div class="ccounter timer-bg">
         <div class="timer-contain">
-            <div class="timer-label">
+            <div class="timer-label col-md-3 col-lg-3 col-sm-6 col-xs-6">
                 <input class="knob days dial" data-readOnly="true" data-width="150" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-min="0" data-max="365" data-rotation="anticlockwise" value="75">
                 <div class="dial-label"><h2>days</h2></div>
             </div>
-            <div class="timer-label">
+            <div class="timer-label col-md-3 col-lg-3 col-sm-6 col-xs-6">
                 <input class="knob hour dial" data-readOnly="true" data-width="150" data-min="0" data-max="24" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-rotation=anticlockwise value="75">
                 <div class="dial-label"><h2>hours</h2></div>
             </div>
-            <div class="timer-label">
+            <div class="timer-label col-md-3 col-lg-3 col-sm-6 col-xs-6">
                 <input class="knob minute dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" value="75">
                 <div class="dial-label"><h2>minutes</h2></div>
             </div>
-            <div class="timer-label">
+            <div class="timer-label col-md-3 col-lg-3 col-sm-6 col-xs-6">
                 <input class="knob second dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-rotation="anticlockwise" value="75">
                 <div class="dial-label"><h2>seconds</h2></div>
             </div>
@@ -56,9 +64,11 @@
     <div class="register">
         <a href="#" class="btn btn-danger reg-button" role="button">Register</a>
     </div>
+    </div>
 </section>
 
 <section class="section sponsor-section">
+	<div class="common">
 		<div class="sponsor gold">
 			<div class="row">
 				<img src="./imgs/gold.png" class="sponsor-logo col-sm-6" />
@@ -83,9 +93,11 @@
 	            </div>
 	        </div>
 		</div>
+	</div>
 </section>
 
             <section class="section">
+    <div class="common">
     <div class="contact">
         <h2 class="contact_heading">Contact US</h2>
         <div class="contacts_section">
@@ -108,6 +120,7 @@
             <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
             <a href="#" class="instagram"><i class="fa fa-instagram fa-2x"></i></a>
         </div>
+    </div>
     </div>
 </section>
         </div>
