--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 
         <link rel="stylesheet" href="assets/styles.css">
         <link href="jquery.fullPage.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
     <body>
         <nav class="navbar">
@@ -29,13 +30,13 @@
             	<img src="./imgs/secondlap.png" class="bg img-responsive" />
             </div>
             <div class="intro-text col-md-6 col-lg-6 col-xs-12 col-sm-12">
-                Life is the most valuable gift, yet we fail to appreciate it. Of all the things one fancies, what if you had the power to give this gift to someone in need? On August 13th, 2017, YES BANK and Excel 2107 will strive to spread this message through ​ “The Second Lap”, a mini marathon being organised ​ in Kochi in association with Gold’s Gym and Medical Trust Hospital, in connection with ​ World Organ Donation Day​.
+                <p>Life is the most valuable gift, yet we fail to appreciate it. Of all the things one fancies, what if you had the power to give this gift to someone in need? On August 13th, 2017, YES BANK and Excel 2107 will strive to spread this message through ​ “The Second Lap”, a mini marathon being organised ​ in Kochi in association with Gold’s Gym and Medical Trust Hospital, in connection with ​ World Organ Donation Day​.</p>
             </div>
         </div>
         </div>
     </section>
 
-            <section class=" section">
+                <section class=" section">
     <div class="common">
     <div class="event-logo">
 	    <img src="./imgs/thesecondlap.png" class="img-responsive" />
@@ -49,19 +50,19 @@
                     <div class="figure days days-1">
                         <span class="top">0</span>
                         <span class="top-back">
-          <span>0</span>
-        </span>
+                            <span>0</span>
+                        </span>
                         <span class="bottom">0</span>
                         <span class="bottom-back">
-          <span>0</span>
-        </span>
+                          <span>0</span>
+                        </span>
                     </div>
 
                     <div class="figure days days-2">
                         <span class="top">0</span>
                         <span class="top-back">
-          <span>0</span>
-        </span>
+                          <span>0</span>
+                        </span>
                         <span class="bottom">0</span>
                         <span class="bottom-back">
           <span>0</span>
