--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,14 @@
                 <section class=" section active intro-section">
     	<div class="common">
         <div class="container">
-
-            <div class="col-md-6 col-lg-6 col-xs-12 col-sm-12">
+            <div class="row">
+            <div class="intro-logo col-lg-8 col-md-8 col-xs-12 col-sm-12">
             	<img src="./imgs/secondlap.png" class="bg img-responsive" />
             </div>
-            <div class="intro-text col-md-6 col-lg-6 col-xs-12 col-sm-12">
+            <div class="intro-text col-lg-4 col-md-4 col-xs-12 col-sm-12">
+                <img src="./imgs/thesecondlap.png">
                 <p>Life is the most valuable gift, yet we fail to appreciate it. Of all the things one fancies, what if you had the power to give this gift to someone in need? On August 13th, 2017, YES BANK and Excel 2107 will strive to spread this message through ​ “The Second Lap”, a mini marathon being organised ​ in Kochi in association with Gold’s Gym and Medical Trust Hospital, in connection with ​ World Organ Donation Day​.</p>
+            </div>
             </div>
         </div>
         </div>
@@ -183,10 +185,6 @@
 		</div>
 	</div>
 </section>
-<<<<<<< HEAD
-
-=======
->>>>>>> 138c834e15bf7e2979447d40c97ebf8e39578c50
 
             <section class="section">
     <div class="common">
