--- a/src/index.html
+++ b/src/index.html
@@ -154,6 +154,11 @@
     </div>
 </section>
 
+            <section class="section">
+    <div id="map">
+    </div>
+</section>
+
 <section class="section sponsor-section">
 	<div class="common">
 		<div class="sponsor gold">
@@ -215,6 +220,9 @@
         <script src="jquery.fullPage.min.js"></script>
         <script src="https://use.fontawesome.com/75bc5066dd.js"></script>
         <script src="assets/scripts.js"></script>
+        <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJogV8LYqidEbxxMRXHR4DLTxQtk_V5Kc&callback=initMap">
+        </script>
+
         <script>
             //$(".dial").knob({'rotation':'anticlockwise'})
 	        $("#fullpage").fullpage();
