--- a/src/index.html
+++ b/src/index.html
@@ -39,121 +39,123 @@
     </section>
 
                 <section class=" section">
-    <div class="common">
-    <div class="event-logo">
-	    <img src="./imgs/thesecondlap.png" class="img-responsive" />
-    </div>
+    <div class="common timer-contain">
+
         <div class="wrap">
 
             <div class="countdown">
                 <div class="bloc-time days" data-init-value="40">
                     <span class="count-title">Days</span>
+                    <div class="figure-contain">
+                        <div class="figure days days-1">
+                            <span class="top">0</span>
+                            <span class="top-back">
+                                <span>0</span>
+                            </span>
+                            <span class="bottom">0</span>
+                            <span class="bottom-back">
+                              <span>0</span>
+                            </span>
+                        </div>
 
-                    <div class="figure days days-1">
-                        <span class="top">0</span>
-                        <span class="top-back">
-                            <span>0</span>
-                        </span>
-                        <span class="bottom">0</span>
-                        <span class="bottom-back">
-                          <span>0</span>
-                        </span>
-                    </div>
-
-                    <div class="figure days days-2">
-                        <span class="top">0</span>
-                        <span class="top-back">
-                          <span>0</span>
-                        </span>
-                        <span class="bottom">0</span>
-                        <span class="bottom-back">
-          <span>0</span>
-        </span>
+                        <div class="figure days days-2">
+                            <span class="top">0</span>
+                            <span class="top-back">
+                              <span>0</span>
+                            </span>
+                            <span class="bottom">0</span>
+                            <span class="bottom-back">
+                                <span>0</span>
+                            </span>
+                        </div>
                     </div>
                 </div>
 
                 <div class="bloc-time hours" data-init-value="40">
                     <span class="count-title">Hours</span>
+                    <div class="figure-contain">
+                        <div class="figure hours hours-1">
+                            <span class="top">0</span>
+                            <span class="top-back">
+                                <span>0</span>
+                            </span>
+                            <span class="bottom">0</span>
+                            <span class="bottom-back">
+                                <span>0</span>
+                            </span>
+                        </div>
 
-                    <div class="figure hours hours-1">
-                        <span class="top">0</span>
-                        <span class="top-back">
-          <span>0</span>
-        </span>
-                        <span class="bottom">0</span>
-                        <span class="bottom-back">
-          <span>0</span>
-        </span>
-                    </div>
-
-                    <div class="figure hours hours-2">
-                        <span class="top">0</span>
-                        <span class="top-back">
-          <span>0</span>
-        </span>
-                        <span class="bottom">0</span>
-                        <span class="bottom-back">
-          <span>0</span>
-        </span>
+                        <div class="figure hours hours-2">
+                            <span class="top">0</span>
+                            <span class="top-back">
+                                <span>0</span>
+                            </span>
+                            <span class="bottom">0</span>
+                            <span class="bottom-back">
+                                <span>0</span>
+                            </span>
+                        </div>
                     </div>
                 </div>
 
                 <div class="bloc-time min" data-init-value="0">
                     <span class="count-title">Minutes</span>
+                    <div class="figure-contain">
+                        <div class="figure min min-1">
+                            <span class="top">0</span>
+                            <span class="top-back">
+                                <span>0</span>
+                            </span>
+                            <span class="bottom">0</span>
+                            <span class="bottom-back">
+                                <span>0</span>
+                            </span>
+                        </div>
 
-                    <div class="figure min min-1">
-                        <span class="top">0</span>
-                        <span class="top-back">
-          <span>0</span>
-        </span>
-                        <span class="bottom">0</span>
-                        <span class="bottom-back">
-          <span>0</span>
-        </span>
-                    </div>
-
-                    <div class="figure min min-2">
-                        <span class="top">0</span>
-                        <span class="top-back">
-          <span>0</span>
-        </span>
-                        <span class="bottom">0</span>
-                        <span class="bottom-back">
-          <span>0</span>
-        </span>
+                        <div class="figure min min-2">
+                            <span class="top">0</span>
+                            <span class="top-back">
+                                <span>0</span>
+                            </span>
+                            <span class="bottom">0</span>
+                            <span class="bottom-back">
+                                <span>0</span>
+                            </span>
+                        </div>
                     </div>
                 </div>
 
                 <div class="bloc-time sec" data-init-value="0">
                     <span class="count-title">Seconds</span>
+                    <div class="figure-contain">
+                        <div class="figure sec sec-1">
+                            <span class="top">0</span>
+                            <span class="top-back">
+                                <span>0</span>
+                            </span>
+                            <span class="bottom">0</span>
+                            <span class="bottom-back">
+                                <span>0</span>
+                            </span>
+                        </div>
 
-                    <div class="figure sec sec-1">
-                        <span class="top">0</span>
-                        <span class="top-back">
-          <span>0</span>
-        </span>
-                        <span class="bottom">0</span>
-                        <span class="bottom-back">
-          <span>0</span>
-        </span>
-                    </div>
-
-                    <div class="figure sec sec-2">
-                        <span class="top">0</span>
-                        <span class="top-back">
-          <span>0</span>
-        </span>
-                        <span class="bottom">0</span>
-                        <span class="bottom-back">
-          <span>0</span>
-        </span>
+                        <div class="figure sec sec-2">
+                            <span class="top">0</span>
+                            <span class="top-back">
+                                <span>0</span>
+                            </span>
+                            <span class="bottom">0</span>
+                            <span class="bottom-back">
+                                <span>0</span>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    <div class="register">
-        <a href="#" class="btn btn-danger reg-button" role="button">Register</a>
-    </div>
+        <div class="register">
+            <a href="#" class="btn btn-danger reg-button" role="button">Register</a>
+        </div>
     </div>
 </section>
 
