--- a/src/index.html
+++ b/src/index.html
@@ -160,8 +160,20 @@
 </section>
 
             <section class="section">
-    <div id="map">
+    <div class="route">
+
+        <div class="waypoints">
+            <h1>WayPoints</h1>
+            <p>Bridge</p>
+            <p>Marine Drive Ground</p>
+            <p>Bridge</p>
+            <p>Marine Drive ground</p>
+
+        </div>
+        <div id="map"></div>
+
     </div>
+
 </section>
 
 <section class="section sponsor-section">
