--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,12 @@
     </head>
     <body>
         <nav class="navbar">
-    <div class="container">
-        <div class="row">
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4">
-            <img src="./imgs/mec_logo.png" class="img-responsive colg-logo">
+    <div class="container nav-container">
+        <div class="left">
+            <img src="./imgs/mec_logo.png" class="colg-logo">
         </div>
-        <div class="col-sm-3 col-md-3 col-lg-5 col-xs-offset-4 col-xs-4">
-            <img src="./imgs/excel2017.png" class="img-responsive excel-logo">
-        </div>
+        <div class="right">
+            <img src="./imgs/excel2017.png" class="right excel-logo">
         </div>
     </div>
 </nav>
