--- a/src/index.html
+++ b/src/index.html
@@ -174,30 +174,30 @@
 </section>
 
 <section class="section sponsor-section">
-	<div class="common">
+	<div class="common container">
 		<div class="sponsor gold">
-			<div class="row">
-				<img src="./imgs/gold.png" class="sponsor-logo col-sm-6" />
-	            <div class="sponsor-text col-sm-6 gold-text">
-	                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				<div class="spon-logo-container">
+					<img src="./imgs/gold.png" class="sponsor-logo " />
+				</div>
+	            <div class="sponsor-text">
+	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	            </div>
-	       	</div>
 		</div>
 		<div class="sponsor yesbank">
-			<div class="row">
-				<img src="./imgs/yesbank.png" class="sponsor-logo col-sm-6" />
-	            <div class="sponsor-text col-sm-6 yesbank-text">
-	                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				<div class="spon-logo-container">
+					<img src="./imgs/yesbank.png" class="sponsor-logo" />
+				</div>
+	            <div class="sponsor-text">
+	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	            </div>
-			</div>
 		</div>
 		<div class="sponsor medical">
-			<div class="row">
-				<img src="./imgs/medical.png" class="sponsor-logo col-sm-6" />
-            	<div class="sponsor-text col-sm-6 medical-text">
-                	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.henderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laboreorum.
+				<div class="spon-logo-container" class="col-lg-6 col-md-6">
+					<img src="./imgs/medical.png" class="sponsor-logo" />
+				</div>
+            	<div class="sponsor-text">
+                	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.henderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laboreorum.</p>
 	            </div>
-	        </div>
 		</div>
 	</div>
 </section>
