--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="intro-text col-lg-4 col-md-4 col-xs-12 col-sm-12">
                 <img src="./imgs/thesecondlap.png">
-                <p>Life is the most valuable gift, yet we fail to appreciate it. Of all the things one fancies, what if you had the power to give this gift to someone in need? On August 13th, 2017, YES BANK and Excel 2107 will strive to spread this message through ​ “The Second Lap”, a mini marathon being organised ​ in Kochi in association with Gold’s Gym and Medical Trust Hospital, in connection with ​ World Organ Donation Day​.</p>
+                <p>Life is the most valuable gift, yet we fail to appreciate it. Of all the things one fancies, what if you had the power to give this gift to someone in need? On August 13th, 2017, <b>YES BANK</b> and <b>Excel 2017</b> will strive to spread this message through ​ <b>“The Second Lap”</b>, a mini marathon being organised ​ in Kochi in association with Gold’s Gym and Medical Trust Hospital, in connection with ​ World Organ Donation Day​.</p>
             </div>
             </div>
         </div>
@@ -180,7 +180,8 @@
 					<img src="./imgs/gold.png" class="sponsor-logo " />
 				</div>
 	            <div class="sponsor-text">
-	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p><b>Gold's Gym</b>, an International fitness centre is  proud to associate with <b>Excel 2017</b>and <b>The Second Lap</b>.The winners of this mini marathon will be rewarded with a year long free membership costing Rs 32,000.
+					</p>
 	            </div>
 		</div>
 		<div class="sponsor yesbank">
@@ -188,7 +189,8 @@
 					<img src="./imgs/yesbank.png" class="sponsor-logo" />
 				</div>
 	            <div class="sponsor-text">
-	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p><b>YES BANK</b> is India's fourth largest private sector bank and are the proud sponsors of <b>The Second Lap</b>,which is a mini marathon conducted to spread the message of organ donation.
+					</p>
 	            </div>
 		</div>
 		<div class="sponsor medical">
@@ -196,7 +198,8 @@
 					<img src="./imgs/medical.png" class="sponsor-logo" />
 				</div>
             	<div class="sponsor-text">
-                	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.henderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laboreorum.</p>
+					<p><b>Medical Trust Hospital</b> is a super speciality hospital located at Kochi,and are the  official medical partners of <b>The second Lap</b>.
+					</p>
 	            </div>
 		</div>
 	</div>
