--- a/src/index.html
+++ b/src/index.html
@@ -161,10 +161,11 @@
 
         <div class="waypoints">
             <h1>WayPoints</h1>
-            <p>Bridge</p>
+            <p>K.K Premachandran Sports Complex</p>
+            <p>Bristow Road</p>
+            <p>Venduruthy Bridge</p>
+            <p>Ravipuram Junction</p>
             <p>Marine Drive Ground</p>
-            <p>Bridge</p>
-            <p>Marine Drive ground</p>
 
         </div>
         <div id="map"></div>
